// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders a Button inside a CommandBar correctly 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      data-automation-id="visibleContent"
      style={
        Object {
          "position": "fixed",
          "visibility": "hidden",
        }
      }
    >
      <div
        className=
            ms-FocusZone
            ms-CommandBar
            &:focus {
              outline: none;
            }
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              background-color: #ffffff;
              display: flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              height: 44px;
              padding-bottom: 0;
              padding-left: 24px;
              padding-right: 14px;
              padding-top: 0;
            }
        data-focuszone-id="FocusZone1"
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDownCapture={[Function]}
        role="menubar"
      >
        <div
          className=
              ms-OverflowSet
              ms-CommandBar-primaryCommand
              {
                align-items: stretch;
                display: flex;
                flex-grow: 1;
                flex-wrap: nowrap;
                position: relative;
              }
          role="presentation"
        >
          <div
            className=
                ms-OverflowSet-item
                {
                  display: inherit;
                  flex-shrink: 0;
                }
          >
            <button
              className=
                  ms-Button
                  ms-Button--commandBar
                  ms-CommandBarItem-link
                  {
                    -moz-osx-font-smoothing: grayscale;
                    -webkit-font-smoothing: antialiased;
                    background-color: #ffffff;
                    border-radius: 0px;
                    border: none;
                    box-sizing: border-box;
                    color: #323130;
                    cursor: pointer;
                    display: inline-block;
                    font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                    font-size: 14px;
                    font-weight: 400;
                    height: 100%;
                    min-width: 40px;
                    outline: transparent;
                    padding-bottom: 0;
                    padding-left: 4px;
                    padding-right: 4px;
                    padding-top: 0;
                    position: relative;
                    text-align: center;
                    text-decoration: none;
                    user-select: none;
                    vertical-align: top;
                  }
                  &::-moz-focus-inner {
                    border: 0;
                  }
                  .ms-Fabric--isFocusVisible &:focus:after {
                    border: 1px solid transparent;
                    bottom: 3px;
                    content: "";
                    left: 3px;
                    outline: 1px solid #605e5c;
                    position: absolute;
                    right: 3px;
                    top: 3px;
                    z-index: 1;
                  }
                  @media screen and (-ms-high-contrast: active){.ms-Fabric--isFocusVisible &:focus:after {
                    border: none;
                    bottom: 4px;
                    left: 4px;
                    outline-color: ButtonText;
                    right: 4px;
                    top: 4px;
                  }
                  &:active > * {
                    left: 0px;
                    position: relative;
                    top: 0px;
                  }
                  @media screen and (-ms-high-contrast: active){& {
                    border: none;
                  }
                  &:hover {
                    background-color: #f3f2f1;
                    color: #201f1e;
                  }
                  @media screen and (-ms-high-contrast: active){&:hover {
                    color: Highlight;
                  }
                  &:hover .ms-Button-icon {
                    color: #106ebe;
                  }
                  &:hover .ms-Button-menuIcon {
                    color: #323130;
                  }
                  &:active {
                    background-color: #edebe9;
                    color: #201f1e;
                  }
                  &:active .ms-Button-icon {
                    color: #005a9e;
                  }
                  &:active .ms-Button-menuIcon {
                    color: #323130;
                  }
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              role="menuitem"
              type="button"
            >
              <span
                className=
                    ms-Button-flexContainer
                    {
                      align-items: center;
                      display: flex;
                      flex-wrap: nowrap;
                      height: 100%;
                      justify-content: center;
                    }
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className=
                      ms-Icon
                      ms-Button-icon
                      {
                        display: inline-block;
                      }
                      {
                        -moz-osx-font-smoothing: grayscale;
                        -webkit-font-smoothing: antialiased;
                        font-family: "FabricMDL2Icons";
                        font-style: normal;
                        font-weight: normal;
                        speak: none;
                      }
                      {
                        color: #0078d4;
                        flex-shrink: 0;
                        font-size: 16px;
                        height: 16px;
                        line-height: 16px;
                        margin-bottom: 0;
                        margin-left: 4px;
                        margin-right: 4px;
                        margin-top: 0;
                        text-align: center;
                        vertical-align: middle;
                      }
                  data-icon-name="Upload"
                  role="presentation"
                >
                  
                </i>
                <span
                  className=
                      ms-Button-textContainer
                      {
                        display: block;
                        flex-grow: 1;
                      }
                >
                  <span
                    className=
                        ms-Button-label
                        {
                          display: block;
                          font-weight: normal;
                          line-height: 100%;
                          margin-bottom: 0;
                          margin-left: 4px;
                          margin-right: 4px;
                          margin-top: 0;
                          white-space: nowrap;
                        }
                    id="id__2"
                  >
                    Button 1
                  </span>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button renders a default Button as an anchor correctly 1`] = `
<a
  className=
      ms-Button
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        background-color: #ffffff;
        border-color: #8a8886;
        border-radius: 2px;
        border-style: solid;
        border-width: 1px;
        box-sizing: border-box;
        color: #323130;
        cursor: pointer;
        display: inline-flex;
        flex-direction: row;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 600;
        justify-content: center;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        min-height: 32px;
        min-width: 100px;
        outline: transparent;
        overflow: hidden;
        padding-bottom: 8px;
        padding-left: 16px;
        padding-right: 16px;
        padding-top: 8px;
        position: relative;
        text-align: center;
        text-decoration: none;
        user-select: none;
        vertical-align: baseline;
      }
      &::-moz-focus-inner {
        border: 0;
      }
      .ms-Fabric--isFocusVisible &:focus:after {
        border: 1px solid #ffffff;
        bottom: 2px;
        content: "";
        left: 2px;
        outline: 1px solid #605e5c;
        position: absolute;
        right: 2px;
        top: 2px;
        z-index: 1;
      }
      & > * {
        margin-left: 4px 4px;
        text-overflow: ellipsis;
      }
      & > *:not(:first-child) {
        margin-left: 8px;
      }
      @media screen and (-ms-high-contrast: active){& {
        border-width: 1px;
      }
      &:hover {
        background-color: #f3f2f1;
        border-color: #8a8886;
        color: #201f1e;
      }
      @media screen and (-ms-high-contrast: active){&:hover {
        border-color: Highlight;
        color: Highlight;
      }
      &:active {
        background-color: #edebe9;
        border-color: #8a8886;
        color: #201f1e;
      }
      @media screen and (-ms-high-contrast: active){&:active {
        border-color: Highlight;
        color: Highlight;
      }
      &:hover .ms-Button-icon {
        color: #201f1e;
      }
      @media screen and (-ms-high-contrast: active){&:hover .ms-Button-icon {
        color: Highlight;
      }
      &:active .ms-Button-icon {
        color: #201f1e;
      }
      @media screen and (-ms-high-contrast: active){&:active .ms-Button-icon {
        color: Highlight;
      }
      .ms-Fabric--isFocusVisible &:focus {
        border-style: solid;
      }
  href="http://bing.com"
  onClick={[Function]}
  role="button"
  tabIndex={0}
  target="_blank"
  title="Let us bing!"
  type="link"
>
  <span
    className=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: inherit;
          display: inline;
          font-family: inherit;
          font-size: 14px;
          font-weight: 600;
          moz-osx-font-smoothing: grayscale;
          overflow: visible;
          webkit-font-smoothing: antialiased;
        }
  >
    Button as an anchor: Go to Bing
  </span>
</a>
`;

exports[`Button renders a default Button with content and an icon correctly 1`] = `
<button
  className=
      ms-Button
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        background-color: #ffffff;
        border-color: #8a8886;
        border-radius: 2px;
        border-style: solid;
        border-width: 1px;
        box-sizing: border-box;
        color: #323130;
        cursor: pointer;
        display: inline-flex;
        flex-direction: row;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 600;
        justify-content: center;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        min-height: 32px;
        min-width: 100px;
        outline: transparent;
        overflow: hidden;
        padding-bottom: 0px;
        padding-left: 20px;
        padding-right: 20px;
        padding-top: 0px;
        position: relative;
        text-align: center;
        text-decoration: none;
        user-select: none;
        vertical-align: baseline;
      }
      &::-moz-focus-inner {
        border: 0;
      }
      .ms-Fabric--isFocusVisible &:focus:after {
        border: 1px solid #ffffff;
        bottom: 2px;
        content: "";
        left: 2px;
        outline: 1px solid #605e5c;
        position: absolute;
        right: 2px;
        top: 2px;
        z-index: 1;
      }
      & > * {
        margin-left: 4px 4px;
        text-overflow: ellipsis;
      }
      & > *:not(:first-child) {
        margin-left: 8px;
      }
      @media screen and (-ms-high-contrast: active){& {
        border-width: 1px;
      }
      &:hover {
        background-color: #f3f2f1;
        border-color: #8a8886;
        color: #201f1e;
      }
      @media screen and (-ms-high-contrast: active){&:hover {
        border-color: Highlight;
        color: Highlight;
      }
      &:active {
        background-color: #edebe9;
        border-color: #8a8886;
        color: #201f1e;
      }
      @media screen and (-ms-high-contrast: active){&:active {
        border-color: Highlight;
        color: Highlight;
      }
      &:hover .ms-Button-icon {
        color: #201f1e;
      }
      @media screen and (-ms-high-contrast: active){&:hover .ms-Button-icon {
        color: Highlight;
      }
      &:active .ms-Button-icon {
        color: #201f1e;
      }
      @media screen and (-ms-high-contrast: active){&:active .ms-Button-icon {
        color: Highlight;
      }
      .ms-Fabric--isFocusVisible &:focus {
        border-style: solid;
      }
  onClick={[Function]}
  role="button"
  tabIndex={0}
  type="button"
>
  <i
    aria-hidden={true}
    className=
        ms-Icon
        ms-Button-icon
        {
          display: inline-block;
        }
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          font-family: "FabricMDL2Icons";
          font-style: normal;
          font-weight: normal;
          speak: none;
        }
        {
          color: #323130;
          display: flex;
          fill: #323130;
          font-size: 16px;
          font-weight: 400;
        }
    data-icon-name="Upload"
    role="presentation"
  >
    
  </i>
  <span
    className=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: inherit;
          display: inline;
          font-family: inherit;
          font-size: 14px;
          font-weight: 600;
          moz-osx-font-smoothing: grayscale;
          overflow: visible;
          webkit-font-smoothing: antialiased;
        }
  >
    Button with string icon
  </span>
</button>
`;

exports[`Button renders a default Button with content correctly 1`] = `
<button
  className=
      ms-Button
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        background-color: #ffffff;
        border-color: #8a8886;
        border-radius: 2px;
        border-style: solid;
        border-width: 1px;
        box-sizing: border-box;
        color: #323130;
        cursor: pointer;
        display: inline-flex;
        flex-direction: row;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 600;
        justify-content: center;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        min-height: 32px;
        min-width: 100px;
        outline: transparent;
        overflow: hidden;
        padding-bottom: 0px;
        padding-left: 20px;
        padding-right: 20px;
        padding-top: 0px;
        position: relative;
        text-align: center;
        text-decoration: none;
        user-select: none;
        vertical-align: baseline;
      }
      &::-moz-focus-inner {
        border: 0;
      }
      .ms-Fabric--isFocusVisible &:focus:after {
        border: 1px solid #ffffff;
        bottom: 2px;
        content: "";
        left: 2px;
        outline: 1px solid #605e5c;
        position: absolute;
        right: 2px;
        top: 2px;
        z-index: 1;
      }
      & > * {
        margin-left: 4px 4px;
        text-overflow: ellipsis;
      }
      & > *:not(:first-child) {
        margin-left: 8px;
      }
      @media screen and (-ms-high-contrast: active){& {
        border-width: 1px;
      }
      &:hover {
        background-color: #f3f2f1;
        border-color: #8a8886;
        color: #201f1e;
      }
      @media screen and (-ms-high-contrast: active){&:hover {
        border-color: Highlight;
        color: Highlight;
      }
      &:active {
        background-color: #edebe9;
        border-color: #8a8886;
        color: #201f1e;
      }
      @media screen and (-ms-high-contrast: active){&:active {
        border-color: Highlight;
        color: Highlight;
      }
      &:hover .ms-Button-icon {
        color: #201f1e;
      }
      @media screen and (-ms-high-contrast: active){&:hover .ms-Button-icon {
        color: Highlight;
      }
      &:active .ms-Button-icon {
        color: #201f1e;
      }
      @media screen and (-ms-high-contrast: active){&:active .ms-Button-icon {
        color: Highlight;
      }
      .ms-Fabric--isFocusVisible &:focus {
        border-style: solid;
      }
  onClick={[Function]}
  role="button"
  tabIndex={0}
  type="button"
>
  <span
    className=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: inherit;
          display: inline;
          font-family: inherit;
          font-size: 14px;
          font-weight: 600;
          moz-osx-font-smoothing: grayscale;
          overflow: visible;
          webkit-font-smoothing: antialiased;
        }
  >
    Default button
  </span>
</button>
`;

exports[`Button renders a default checked Button correctly 1`] = `
<button
  className=
      ms-Button
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        background-color: #c8c6c4;
        border-color: #8a8886;
        border-radius: 2px;
        border-style: solid;
        border-width: 1px;
        box-sizing: border-box;
        color: #201f1e;
        cursor: pointer;
        display: inline-flex;
        flex-direction: row;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 600;
        justify-content: center;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        min-height: 32px;
        min-width: 100px;
        outline: transparent;
        overflow: hidden;
        padding-bottom: 0px;
        padding-left: 20px;
        padding-right: 20px;
        padding-top: 0px;
        position: relative;
        text-align: center;
        text-decoration: none;
        user-select: none;
        vertical-align: baseline;
      }
      &::-moz-focus-inner {
        border: 0;
      }
      .ms-Fabric--isFocusVisible &:focus:after {
        border: 1px solid #ffffff;
        bottom: 2px;
        content: "";
        left: 2px;
        outline: 1px solid #605e5c;
        position: absolute;
        right: 2px;
        top: 2px;
        z-index: 1;
      }
      & > * {
        margin-left: 4px 4px;
        text-overflow: ellipsis;
      }
      & > *:not(:first-child) {
        margin-left: 8px;
      }
      @media screen and (-ms-high-contrast: active){& {
        border-width: 1px;
      }
      &:hover {
        background-color: #edebe9;
        border-color: #8a8886;
        color: #000000;
      }
      @media screen and (-ms-high-contrast: active){&:hover {
        border-color: Highlight;
        color: Highlight;
      }
      &:active {
        background-color: #edebe9;
        border-color: #8a8886;
        color: #201f1e;
      }
      @media screen and (-ms-high-contrast: active){&:active {
        border-color: Highlight;
        color: Highlight;
      }
      &:hover .ms-Button-icon {
        color: #000000;
      }
      @media screen and (-ms-high-contrast: active){&:hover .ms-Button-icon {
        color: Highlight;
      }
      &:active .ms-Button-icon {
        color: #201f1e;
      }
      @media screen and (-ms-high-contrast: active){&:active .ms-Button-icon {
        color: Highlight;
      }
      .ms-Fabric--isFocusVisible &:focus {
        border-style: solid;
      }
  onClick={[Function]}
  role="button"
  tabIndex={0}
  type="button"
>
  <span
    className=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: inherit;
          display: inline;
          font-family: inherit;
          font-size: 14px;
          font-weight: 600;
          moz-osx-font-smoothing: grayscale;
          overflow: visible;
          webkit-font-smoothing: antialiased;
        }
  >
    Button
  </span>
</button>
`;

exports[`Button renders a default circular Button with an icon correctly 1`] = `
<button
  className=
      ms-Button
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        background-color: #ffffff;
        border-color: #8a8886;
        border-radius: 50%;
        border-style: solid;
        border-width: 1px;
        box-sizing: border-box;
        color: #323130;
        cursor: pointer;
        display: inline-flex;
        flex-direction: row;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 600;
        justify-content: center;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        min-height: 32px;
        min-width: 32px;
        outline-color: transparent;
        overflow: hidden;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        text-align: center;
        text-decoration: none;
        user-select: none;
        vertical-align: baseline;
      }
      .ms-Fabric--isFocusVisible &:focus {
        background-clip: content-box;
        border-color: #605e5c;
        border-style: double;
        border-width: 3px;
        outline-color: transparent;
        padding-bottom: 1px;
        padding-left: 1px;
        padding-right: 1px;
        padding-top: 1px;
      }
      & > * {
        margin-left: 4px 4px;
        text-overflow: ellipsis;
      }
      & > *:not(:first-child) {
        margin-left: 8px;
      }
      @media screen and (-ms-high-contrast: active){& {
        border-width: 1px;
      }
      &:hover {
        background-color: #f3f2f1;
        border-color: #8a8886;
        color: #201f1e;
      }
      @media screen and (-ms-high-contrast: active){&:hover {
        border-color: Highlight;
        color: Highlight;
      }
      &:active {
        background-color: #edebe9;
        border-color: #8a8886;
        color: #201f1e;
      }
      @media screen and (-ms-high-contrast: active){&:active {
        border-color: Highlight;
        color: Highlight;
      }
      &:hover .ms-Button-icon {
        color: #201f1e;
      }
      @media screen and (-ms-high-contrast: active){&:hover .ms-Button-icon {
        color: Highlight;
      }
      &:active .ms-Button-icon {
        color: #201f1e;
      }
      @media screen and (-ms-high-contrast: active){&:active .ms-Button-icon {
        color: Highlight;
      }
  onClick={[Function]}
  role="button"
  tabIndex={0}
  type="button"
>
  <i
    aria-hidden={true}
    className=
        ms-Icon
        ms-Button-icon
        {
          display: inline-block;
        }
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          font-family: "FabricMDL2Icons-3";
          font-style: normal;
          font-weight: normal;
          speak: none;
        }
        {
          color: #323130;
          display: flex;
          fill: #323130;
          font-size: 16px;
          font-weight: 400;
        }
    data-icon-name="PeopleAdd"
    role="presentation"
  >
    
  </i>
</button>
`;

exports[`Button renders a default circular checked Button correctly 1`] = `
<button
  className=
      ms-Button
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        background-color: #c8c6c4;
        border-color: #8a8886;
        border-radius: 50%;
        border-style: solid;
        border-width: 1px;
        box-sizing: border-box;
        color: #201f1e;
        cursor: pointer;
        display: inline-flex;
        flex-direction: row;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 600;
        justify-content: center;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        min-height: 32px;
        min-width: 32px;
        outline-color: transparent;
        overflow: hidden;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        text-align: center;
        text-decoration: none;
        user-select: none;
        vertical-align: baseline;
      }
      .ms-Fabric--isFocusVisible &:focus {
        background-clip: content-box;
        border-color: #605e5c;
        border-style: double;
        border-width: 3px;
        outline-color: transparent;
        padding-bottom: 1px;
        padding-left: 1px;
        padding-right: 1px;
        padding-top: 1px;
      }
      & > * {
        margin-left: 4px 4px;
        text-overflow: ellipsis;
      }
      & > *:not(:first-child) {
        margin-left: 8px;
      }
      @media screen and (-ms-high-contrast: active){& {
        border-width: 1px;
      }
      &:hover {
        background-color: #edebe9;
        border-color: #8a8886;
        color: #000000;
      }
      @media screen and (-ms-high-contrast: active){&:hover {
        border-color: Highlight;
        color: Highlight;
      }
      &:active {
        background-color: #edebe9;
        border-color: #8a8886;
        color: #201f1e;
      }
      @media screen and (-ms-high-contrast: active){&:active {
        border-color: Highlight;
        color: Highlight;
      }
      &:hover .ms-Button-icon {
        color: #000000;
      }
      @media screen and (-ms-high-contrast: active){&:hover .ms-Button-icon {
        color: Highlight;
      }
      &:active .ms-Button-icon {
        color: #201f1e;
      }
      @media screen and (-ms-high-contrast: active){&:active .ms-Button-icon {
        color: Highlight;
      }
  onClick={[Function]}
  role="button"
  tabIndex={0}
  type="button"
>
  <i
    aria-hidden={true}
    className=
        ms-Icon
        ms-Button-icon
        {
          display: inline-block;
        }
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          font-family: "FabricMDL2Icons-3";
          font-style: normal;
          font-weight: normal;
          speak: none;
        }
        {
          color: #201f1e;
          display: flex;
          fill: #201f1e;
          font-size: 16px;
          font-weight: 400;
        }
    data-icon-name="Volume3"
    role="presentation"
  >
    
  </i>
</button>
`;

exports[`Button renders a default circular disabled checked Button correctly 1`] = `
<button
  aria-disabled={true}
  className=
      ms-Button
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        background-color: #f3f2f1;
        border-color: #f3f2f1;
        border-radius: 50%;
        border-style: solid;
        border-width: 1px;
        box-sizing: border-box;
        color: #a19f9d;
        cursor: default;
        display: inline-flex;
        flex-direction: row;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 600;
        justify-content: center;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        min-height: 32px;
        min-width: 32px;
        outline-color: transparent;
        overflow: hidden;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        text-align: center;
        text-decoration: none;
        user-select: none;
        vertical-align: baseline;
      }
      .ms-Fabric--isFocusVisible &:focus {
        background-clip: content-box;
        border-color: #605e5c;
        border-style: double;
        border-width: 3px;
        outline-color: transparent;
        padding-bottom: 1px;
        padding-left: 1px;
        padding-right: 1px;
        padding-top: 1px;
      }
      & > * {
        margin-left: 4px 4px;
        text-overflow: ellipsis;
      }
      & > *:not(:first-child) {
        margin-left: 8px;
      }
      @media screen and (-ms-high-contrast: active){& {
        background-color: Window;
        border-color: GrayText;
        border-width: 1px;
        color: GrayText;
      }
      &:hover {
        background-color: #f3f2f1;
        border-color: #f3f2f1;
        color: #a19f9d;
      }
      @media screen and (-ms-high-contrast: active){&:hover {
        background-color: Window;
        border-color: GrayText;
        color: GrayText;
      }
      &:active {
        background-color: #f3f2f1;
        border-color: #f3f2f1;
        color: #a19f9d;
      }
      @media screen and (-ms-high-contrast: active){&:active {
        background-color: Window;
        border-color: GrayText;
        color: GrayText;
      }
      &:hover .ms-Button-icon {
        color: #a19f9d;
      }
      @media screen and (-ms-high-contrast: active){&:hover .ms-Button-icon {
        color: GrayText;
      }
      &:active .ms-Button-icon {
        color: #a19f9d;
      }
      @media screen and (-ms-high-contrast: active){&:active .ms-Button-icon {
        color: GrayText;
      }
  disabled={true}
  onClick={[Function]}
  role="button"
  type="button"
>
  <i
    aria-hidden={true}
    className=
        ms-Icon
        ms-Button-icon
        {
          display: inline-block;
        }
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          font-family: "FabricMDL2Icons-3";
          font-style: normal;
          font-weight: normal;
          speak: none;
        }
        {
          color: #a19f9d;
          display: flex;
          fill: #a19f9d;
          font-size: 16px;
          font-weight: 400;
        }
        @media screen and (-ms-high-contrast: active){& {
          color: GrayText;
        }
    data-icon-name="Volume3"
    role="presentation"
  >
    
  </i>
</button>
`;

exports[`Button renders a default disabled checked Button correctly 1`] = `
<button
  aria-disabled={true}
  className=
      ms-Button
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        background-color: #f3f2f1;
        border-color: #f3f2f1;
        border-radius: 2px;
        border-style: solid;
        border-width: 1px;
        box-sizing: border-box;
        color: #a19f9d;
        cursor: default;
        display: inline-flex;
        flex-direction: row;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 600;
        justify-content: center;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        min-height: 32px;
        min-width: 100px;
        outline: transparent;
        overflow: hidden;
        padding-bottom: 0px;
        padding-left: 20px;
        padding-right: 20px;
        padding-top: 0px;
        position: relative;
        text-align: center;
        text-decoration: none;
        user-select: none;
        vertical-align: baseline;
      }
      &::-moz-focus-inner {
        border: 0;
      }
      .ms-Fabric--isFocusVisible &:focus:after {
        border: 1px solid #ffffff;
        bottom: 2px;
        content: "";
        left: 2px;
        outline: 1px solid #605e5c;
        position: absolute;
        right: 2px;
        top: 2px;
        z-index: 1;
      }
      & > * {
        margin-left: 4px 4px;
        text-overflow: ellipsis;
      }
      & > *:not(:first-child) {
        margin-left: 8px;
      }
      @media screen and (-ms-high-contrast: active){& {
        background-color: Window;
        border-color: GrayText;
        border-width: 1px;
        color: GrayText;
      }
      &:hover {
        background-color: #f3f2f1;
        border-color: #f3f2f1;
        color: #a19f9d;
      }
      @media screen and (-ms-high-contrast: active){&:hover {
        background-color: Window;
        border-color: GrayText;
        color: GrayText;
      }
      &:active {
        background-color: #f3f2f1;
        border-color: #f3f2f1;
        color: #a19f9d;
      }
      @media screen and (-ms-high-contrast: active){&:active {
        background-color: Window;
        border-color: GrayText;
        color: GrayText;
      }
      &:hover .ms-Button-icon {
        color: #a19f9d;
      }
      @media screen and (-ms-high-contrast: active){&:hover .ms-Button-icon {
        color: GrayText;
      }
      &:active .ms-Button-icon {
        color: #a19f9d;
      }
      @media screen and (-ms-high-contrast: active){&:active .ms-Button-icon {
        color: GrayText;
      }
      .ms-Fabric--isFocusVisible &:focus {
        border-style: solid;
      }
  disabled={true}
  onClick={[Function]}
  role="button"
  type="button"
>
  <span
    className=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: inherit;
          display: inline;
          font-family: inherit;
          font-size: 14px;
          font-weight: 600;
          moz-osx-font-smoothing: grayscale;
          overflow: visible;
          webkit-font-smoothing: antialiased;
        }
  >
    Button
  </span>
</button>
`;

exports[`Button renders a disabled default Button with content correctly 1`] = `
<button
  aria-disabled={true}
  className=
      ms-Button
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        background-color: #f3f2f1;
        border-color: #f3f2f1;
        border-radius: 2px;
        border-style: solid;
        border-width: 1px;
        box-sizing: border-box;
        color: #a19f9d;
        cursor: default;
        display: inline-flex;
        flex-direction: row;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 600;
        justify-content: center;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        min-height: 32px;
        min-width: 100px;
        outline: transparent;
        overflow: hidden;
        padding-bottom: 0px;
        padding-left: 20px;
        padding-right: 20px;
        padding-top: 0px;
        position: relative;
        text-align: center;
        text-decoration: none;
        user-select: none;
        vertical-align: baseline;
      }
      &::-moz-focus-inner {
        border: 0;
      }
      .ms-Fabric--isFocusVisible &:focus:after {
        border: 1px solid #ffffff;
        bottom: 2px;
        content: "";
        left: 2px;
        outline: 1px solid #605e5c;
        position: absolute;
        right: 2px;
        top: 2px;
        z-index: 1;
      }
      & > * {
        margin-left: 4px 4px;
        text-overflow: ellipsis;
      }
      & > *:not(:first-child) {
        margin-left: 8px;
      }
      @media screen and (-ms-high-contrast: active){& {
        background-color: Window;
        border-color: GrayText;
        border-width: 1px;
        color: GrayText;
      }
      &:hover {
        background-color: #f3f2f1;
        border-color: #f3f2f1;
        color: #a19f9d;
      }
      @media screen and (-ms-high-contrast: active){&:hover {
        background-color: Window;
        border-color: GrayText;
        color: GrayText;
      }
      &:active {
        background-color: #f3f2f1;
        border-color: #f3f2f1;
        color: #a19f9d;
      }
      @media screen and (-ms-high-contrast: active){&:active {
        background-color: Window;
        border-color: GrayText;
        color: GrayText;
      }
      &:hover .ms-Button-icon {
        color: #a19f9d;
      }
      @media screen and (-ms-high-contrast: active){&:hover .ms-Button-icon {
        color: GrayText;
      }
      &:active .ms-Button-icon {
        color: #a19f9d;
      }
      @media screen and (-ms-high-contrast: active){&:active .ms-Button-icon {
        color: GrayText;
      }
      .ms-Fabric--isFocusVisible &:focus {
        border-style: solid;
      }
  disabled={true}
  onClick={[Function]}
  role="button"
  type="button"
>
  <span
    className=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: inherit;
          display: inline;
          font-family: inherit;
          font-size: 14px;
          font-weight: 600;
          moz-osx-font-smoothing: grayscale;
          overflow: visible;
          webkit-font-smoothing: antialiased;
        }
  >
    Disabled default button
  </span>
</button>
`;

exports[`Button renders a disabled default circular Button with an icon correctly 1`] = `
<button
  aria-disabled={true}
  className=
      ms-Button
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        background-color: #f3f2f1;
        border-color: #f3f2f1;
        border-radius: 50%;
        border-style: solid;
        border-width: 1px;
        box-sizing: border-box;
        color: #a19f9d;
        cursor: default;
        display: inline-flex;
        flex-direction: row;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 600;
        justify-content: center;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        min-height: 32px;
        min-width: 32px;
        outline-color: transparent;
        overflow: hidden;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        text-align: center;
        text-decoration: none;
        user-select: none;
        vertical-align: baseline;
      }
      .ms-Fabric--isFocusVisible &:focus {
        background-clip: content-box;
        border-color: #605e5c;
        border-style: double;
        border-width: 3px;
        outline-color: transparent;
        padding-bottom: 1px;
        padding-left: 1px;
        padding-right: 1px;
        padding-top: 1px;
      }
      & > * {
        margin-left: 4px 4px;
        text-overflow: ellipsis;
      }
      & > *:not(:first-child) {
        margin-left: 8px;
      }
      @media screen and (-ms-high-contrast: active){& {
        background-color: Window;
        border-color: GrayText;
        border-width: 1px;
        color: GrayText;
      }
      &:hover {
        background-color: #f3f2f1;
        border-color: #f3f2f1;
        color: #a19f9d;
      }
      @media screen and (-ms-high-contrast: active){&:hover {
        background-color: Window;
        border-color: GrayText;
        color: GrayText;
      }
      &:active {
        background-color: #f3f2f1;
        border-color: #f3f2f1;
        color: #a19f9d;
      }
      @media screen and (-ms-high-contrast: active){&:active {
        background-color: Window;
        border-color: GrayText;
        color: GrayText;
      }
      &:hover .ms-Button-icon {
        color: #a19f9d;
      }
      @media screen and (-ms-high-contrast: active){&:hover .ms-Button-icon {
        color: GrayText;
      }
      &:active .ms-Button-icon {
        color: #a19f9d;
      }
      @media screen and (-ms-high-contrast: active){&:active .ms-Button-icon {
        color: GrayText;
      }
  disabled={true}
  onClick={[Function]}
  role="button"
  type="button"
>
  <i
    aria-hidden={true}
    className=
        ms-Icon
        ms-Button-icon
        {
          display: inline-block;
        }
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          font-family: "FabricMDL2Icons-0";
          font-style: normal;
          font-weight: normal;
          speak: none;
        }
        {
          color: #a19f9d;
          display: flex;
          fill: #a19f9d;
          font-size: 16px;
          font-weight: 400;
        }
        @media screen and (-ms-high-contrast: active){& {
          color: GrayText;
        }
    data-icon-name="Phone"
    role="presentation"
  >
    
  </i>
</button>
`;

exports[`Button renders a disabled primary Button with content correctly 1`] = `
<button
  aria-disabled={true}
  className=
      ms-Button
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        background-color: #f3f2f1;
        border-color: #f3f2f1;
        border-radius: 2px;
        border-style: solid;
        border-width: 0px;
        box-sizing: border-box;
        color: #a19f9d;
        cursor: default;
        display: inline-flex;
        flex-direction: row;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 600;
        justify-content: center;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        min-height: 32px;
        min-width: 100px;
        outline-color: transparent;
        outline: transparent;
        overflow: hidden;
        padding-bottom: 0px;
        padding-left: 20px;
        padding-right: 20px;
        padding-top: 0px;
        position: relative;
        text-align: center;
        text-decoration: none;
        user-select: none;
        vertical-align: baseline;
      }
      &::-moz-focus-inner {
        border: 0;
      }
      .ms-Fabric--isFocusVisible &:focus:after {
        border: 1px solid #ffffff;
        bottom: 2px;
        content: "";
        left: 2px;
        outline: 1px solid transparent;
        position: absolute;
        right: 2px;
        top: 2px;
        z-index: 1;
      }
      & > * {
        margin-left: 4px 4px;
        text-overflow: ellipsis;
      }
      & > *:not(:first-child) {
        margin-left: 8px;
      }
      @media screen and (-ms-high-contrast: active){& {
        -ms-high-contrast-adjust: none;
        background-color: Window;
        border-color: GrayText;
        border-width: 1px;
        color: GrayText;
      }
      &:hover {
        background-color: #f3f2f1;
        border-color: #f3f2f1;
        color: #a19f9d;
      }
      @media screen and (-ms-high-contrast: active){&:hover {
        background-color: Window;
        border-color: GrayText;
        color: GrayText;
      }
      &:active {
        background-color: #f3f2f1;
        border-color: #f3f2f1;
        color: #a19f9d;
      }
      @media screen and (-ms-high-contrast: active){&:active {
        background-color: Window;
        border-color: GrayText;
        color: GrayText;
      }
      &:hover .ms-Button-icon {
        color: #a19f9d;
      }
      @media screen and (-ms-high-contrast: active){&:hover .ms-Button-icon {
        color: GrayText;
      }
      &:active .ms-Button-icon {
        color: #a19f9d;
      }
      @media screen and (-ms-high-contrast: active){&:active .ms-Button-icon {
        color: GrayText;
      }
      .ms-Fabric--isFocusVisible &:focus {
        border-style: solid;
        outline-color: transparent;
      }
  disabled={true}
  onClick={[Function]}
  role="button"
  type="button"
>
  <span
    className=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: inherit;
          display: inline;
          font-family: inherit;
          font-size: 14px;
          font-weight: 600;
          moz-osx-font-smoothing: grayscale;
          overflow: visible;
          webkit-font-smoothing: antialiased;
        }
  >
    Disabled primary button
  </span>
</button>
`;

exports[`Button renders a disabled primary circular Button with an icon correctly 1`] = `
<button
  aria-disabled={true}
  className=
      ms-Button
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        background-color: #f3f2f1;
        border-color: #f3f2f1;
        border-radius: 50%;
        border-style: solid;
        border-width: 0px;
        box-sizing: border-box;
        color: #a19f9d;
        cursor: default;
        display: inline-flex;
        flex-direction: row;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 600;
        justify-content: center;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        min-height: 32px;
        min-width: 32px;
        outline-color: transparent;
        overflow: hidden;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        text-align: center;
        text-decoration: none;
        user-select: none;
        vertical-align: baseline;
      }
      .ms-Fabric--isFocusVisible &:focus {
        background-clip: content-box;
        border-color: #605e5c;
        border-style: solid;
        border-width: 1px;
        outline-color: transparent;
        padding-bottom: 1px;
        padding-left: 1px;
        padding-right: 1px;
        padding-top: 1px;
      }
      & > * {
        margin-left: 4px 4px;
        text-overflow: ellipsis;
      }
      & > *:not(:first-child) {
        margin-left: 8px;
      }
      @media screen and (-ms-high-contrast: active){& {
        -ms-high-contrast-adjust: none;
        background-color: Window;
        border-color: GrayText;
        border-width: 1px;
        color: GrayText;
      }
      &:hover {
        background-color: #f3f2f1;
        border-color: #f3f2f1;
        color: #a19f9d;
      }
      @media screen and (-ms-high-contrast: active){&:hover {
        background-color: Window;
        border-color: GrayText;
        color: GrayText;
      }
      &:active {
        background-color: #f3f2f1;
        border-color: #f3f2f1;
        color: #a19f9d;
      }
      @media screen and (-ms-high-contrast: active){&:active {
        background-color: Window;
        border-color: GrayText;
        color: GrayText;
      }
      &:hover .ms-Button-icon {
        color: #a19f9d;
      }
      @media screen and (-ms-high-contrast: active){&:hover .ms-Button-icon {
        color: GrayText;
      }
      &:active .ms-Button-icon {
        color: #a19f9d;
      }
      @media screen and (-ms-high-contrast: active){&:active .ms-Button-icon {
        color: GrayText;
      }
  disabled={true}
  onClick={[Function]}
  role="button"
  type="button"
>
  <i
    aria-hidden={true}
    className=
        ms-Icon
        ms-Button-icon
        {
          display: inline-block;
        }
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          font-family: "FabricMDL2Icons-0";
          font-style: normal;
          font-weight: normal;
          speak: none;
        }
        {
          color: #a19f9d;
          display: flex;
          fill: #a19f9d;
          font-size: 16px;
          font-weight: 400;
        }
        @media screen and (-ms-high-contrast: active){& {
          color: GrayText;
        }
    data-icon-name="Attach"
    role="presentation"
  >
    
  </i>
</button>
`;

exports[`Button renders a primary Button as an anchor correctly 1`] = `
<a
  className=
      ms-Button
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        background-color: #0078d4;
        border-color: #8a8886;
        border-radius: 2px;
        border-style: solid;
        border-width: 0px;
        box-sizing: border-box;
        color: #ffffff;
        cursor: pointer;
        display: inline-flex;
        flex-direction: row;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 600;
        justify-content: center;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        min-height: 32px;
        min-width: 100px;
        outline-color: transparent;
        outline: transparent;
        overflow: hidden;
        padding-bottom: 8px;
        padding-left: 16px;
        padding-right: 16px;
        padding-top: 8px;
        position: relative;
        text-align: center;
        text-decoration: none;
        user-select: none;
        vertical-align: baseline;
      }
      &::-moz-focus-inner {
        border: 0;
      }
      .ms-Fabric--isFocusVisible &:focus:after {
        border: 1px solid #ffffff;
        bottom: 2px;
        content: "";
        left: 2px;
        outline: 1px solid transparent;
        position: absolute;
        right: 2px;
        top: 2px;
        z-index: 1;
      }
      & > * {
        margin-left: 4px 4px;
        text-overflow: ellipsis;
      }
      & > *:not(:first-child) {
        margin-left: 8px;
      }
      @media screen and (-ms-high-contrast: active){& {
        -ms-high-contrast-adjust: none;
        background-color: WindowText;
        border-width: 1px;
        color: Window;
      }
      &:hover {
        background-color: #106ebe;
        border-color: #8a8886;
        color: #ffffff;
      }
      @media screen and (-ms-high-contrast: active){&:hover {
        background-color: Highlight;
        border-color: Highlight;
        color: Window;
      }
      &:active {
        background-color: #005a9e;
        border-color: #8a8886;
        color: #ffffff;
      }
      @media screen and (-ms-high-contrast: active){&:active {
        background-color: Highlight;
        border-color: Highlight;
        color: Window;
      }
      &:hover .ms-Button-icon {
        color: #ffffff;
      }
      @media screen and (-ms-high-contrast: active){&:hover .ms-Button-icon {
        color: Window;
      }
      &:active .ms-Button-icon {
        color: #ffffff;
      }
      @media screen and (-ms-high-contrast: active){&:active .ms-Button-icon {
        color: Window;
      }
      .ms-Fabric--isFocusVisible &:focus {
        border-style: solid;
        outline-color: transparent;
      }
  href="http://bing.com"
  onClick={[Function]}
  role="button"
  tabIndex={0}
  target="_blank"
  title="Let us bing!"
  type="link"
>
  <span
    className=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: inherit;
          display: inline;
          font-family: inherit;
          font-size: 14px;
          font-weight: 600;
          moz-osx-font-smoothing: grayscale;
          overflow: visible;
          webkit-font-smoothing: antialiased;
        }
  >
    Button as an anchor: Go to Bing
  </span>
</a>
`;

exports[`Button renders a primary Button with content correctly 1`] = `
<button
  className=
      ms-Button
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        background-color: #0078d4;
        border-color: #8a8886;
        border-radius: 2px;
        border-style: solid;
        border-width: 0px;
        box-sizing: border-box;
        color: #ffffff;
        cursor: pointer;
        display: inline-flex;
        flex-direction: row;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 600;
        justify-content: center;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        min-height: 32px;
        min-width: 100px;
        outline-color: transparent;
        outline: transparent;
        overflow: hidden;
        padding-bottom: 0px;
        padding-left: 20px;
        padding-right: 20px;
        padding-top: 0px;
        position: relative;
        text-align: center;
        text-decoration: none;
        user-select: none;
        vertical-align: baseline;
      }
      &::-moz-focus-inner {
        border: 0;
      }
      .ms-Fabric--isFocusVisible &:focus:after {
        border: 1px solid #ffffff;
        bottom: 2px;
        content: "";
        left: 2px;
        outline: 1px solid transparent;
        position: absolute;
        right: 2px;
        top: 2px;
        z-index: 1;
      }
      & > * {
        margin-left: 4px 4px;
        text-overflow: ellipsis;
      }
      & > *:not(:first-child) {
        margin-left: 8px;
      }
      @media screen and (-ms-high-contrast: active){& {
        -ms-high-contrast-adjust: none;
        background-color: WindowText;
        border-width: 1px;
        color: Window;
      }
      &:hover {
        background-color: #106ebe;
        border-color: #8a8886;
        color: #ffffff;
      }
      @media screen and (-ms-high-contrast: active){&:hover {
        background-color: Highlight;
        border-color: Highlight;
        color: Window;
      }
      &:active {
        background-color: #005a9e;
        border-color: #8a8886;
        color: #ffffff;
      }
      @media screen and (-ms-high-contrast: active){&:active {
        background-color: Highlight;
        border-color: Highlight;
        color: Window;
      }
      &:hover .ms-Button-icon {
        color: #ffffff;
      }
      @media screen and (-ms-high-contrast: active){&:hover .ms-Button-icon {
        color: Window;
      }
      &:active .ms-Button-icon {
        color: #ffffff;
      }
      @media screen and (-ms-high-contrast: active){&:active .ms-Button-icon {
        color: Window;
      }
      .ms-Fabric--isFocusVisible &:focus {
        border-style: solid;
        outline-color: transparent;
      }
  onClick={[Function]}
  role="button"
  tabIndex={0}
  type="button"
>
  <span
    className=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: inherit;
          display: inline;
          font-family: inherit;
          font-size: 14px;
          font-weight: 600;
          moz-osx-font-smoothing: grayscale;
          overflow: visible;
          webkit-font-smoothing: antialiased;
        }
  >
    Primary button
  </span>
</button>
`;

exports[`Button renders a primary Button with custom content and icon right-aligned correctly 1`] = `
<button
  className=
      ms-Button
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        background-color: #0078d4;
        border-color: #8a8886;
        border-radius: 2px;
        border-style: solid;
        border-width: 0px;
        box-sizing: border-box;
        color: #ffffff;
        cursor: pointer;
        display: inline-flex;
        flex-direction: row;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 600;
        justify-content: center;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        min-height: 32px;
        min-width: 100px;
        outline-color: transparent;
        outline: transparent;
        overflow: hidden;
        padding-bottom: 0px;
        padding-left: 20px;
        padding-right: 20px;
        padding-top: 0px;
        position: relative;
        text-align: center;
        text-decoration: none;
        user-select: none;
        vertical-align: baseline;
      }
      &::-moz-focus-inner {
        border: 0;
      }
      .ms-Fabric--isFocusVisible &:focus:after {
        border: 1px solid #ffffff;
        bottom: 2px;
        content: "";
        left: 2px;
        outline: 1px solid transparent;
        position: absolute;
        right: 2px;
        top: 2px;
        z-index: 1;
      }
      & > * {
        margin-left: 4px 4px;
        text-overflow: ellipsis;
      }
      & > *:not(:first-child) {
        margin-left: 8px;
      }
      @media screen and (-ms-high-contrast: active){& {
        -ms-high-contrast-adjust: none;
        background-color: WindowText;
        border-width: 1px;
        color: Window;
      }
      &:hover {
        background-color: #106ebe;
        border-color: #8a8886;
        color: #ffffff;
      }
      @media screen and (-ms-high-contrast: active){&:hover {
        background-color: Highlight;
        border-color: Highlight;
        color: Window;
      }
      &:active {
        background-color: #005a9e;
        border-color: #8a8886;
        color: #ffffff;
      }
      @media screen and (-ms-high-contrast: active){&:active {
        background-color: Highlight;
        border-color: Highlight;
        color: Window;
      }
      &:hover .ms-Button-icon {
        color: #ffffff;
      }
      @media screen and (-ms-high-contrast: active){&:hover .ms-Button-icon {
        color: Window;
      }
      &:active .ms-Button-icon {
        color: #ffffff;
      }
      @media screen and (-ms-high-contrast: active){&:active .ms-Button-icon {
        color: Window;
      }
      .ms-Fabric--isFocusVisible &:focus {
        border-style: solid;
        outline-color: transparent;
      }
  onClick={[Function]}
  role="button"
  tabIndex={0}
  type="button"
>
  <span
    className=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: inherit;
          display: inline;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          moz-osx-font-smoothing: grayscale;
          webkit-font-smoothing: antialiased;
        }
  >
    With custom text/icon right aligned
  </span>
  <i
    aria-hidden={true}
    className=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: inline-block;
          font-family: "FabricMDL2Icons";
          font-style: normal;
          font-weight: normal;
          speak: none;
        }
    data-icon-name="Upload"
    role="presentation"
  >
    
  </i>
</button>
`;

exports[`Button renders a primary checked Button correctly 1`] = `
<button
  className=
      ms-Button
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        background-color: #005a9e;
        border-color: #8a8886;
        border-radius: 2px;
        border-style: solid;
        border-width: 0px;
        box-sizing: border-box;
        color: #ffffff;
        cursor: pointer;
        display: inline-flex;
        flex-direction: row;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 600;
        justify-content: center;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        min-height: 32px;
        min-width: 100px;
        outline-color: transparent;
        outline: transparent;
        overflow: hidden;
        padding-bottom: 0px;
        padding-left: 20px;
        padding-right: 20px;
        padding-top: 0px;
        position: relative;
        text-align: center;
        text-decoration: none;
        user-select: none;
        vertical-align: baseline;
      }
      &::-moz-focus-inner {
        border: 0;
      }
      .ms-Fabric--isFocusVisible &:focus:after {
        border: 1px solid #ffffff;
        bottom: 2px;
        content: "";
        left: 2px;
        outline: 1px solid transparent;
        position: absolute;
        right: 2px;
        top: 2px;
        z-index: 1;
      }
      & > * {
        margin-left: 4px 4px;
        text-overflow: ellipsis;
      }
      & > *:not(:first-child) {
        margin-left: 8px;
      }
      @media screen and (-ms-high-contrast: active){& {
        -ms-high-contrast-adjust: none;
        background-color: WindowText;
        border-width: 1px;
        color: Window;
      }
      &:hover {
        background-color: #106ebe;
        border-color: #8a8886;
        color: #ffffff;
      }
      @media screen and (-ms-high-contrast: active){&:hover {
        background-color: Highlight;
        border-color: Highlight;
        color: Window;
      }
      &:active {
        background-color: #005a9e;
        border-color: #8a8886;
        color: #ffffff;
      }
      @media screen and (-ms-high-contrast: active){&:active {
        background-color: Highlight;
        border-color: Highlight;
        color: Window;
      }
      &:hover .ms-Button-icon {
        color: #ffffff;
      }
      @media screen and (-ms-high-contrast: active){&:hover .ms-Button-icon {
        color: Window;
      }
      &:active .ms-Button-icon {
        color: #ffffff;
      }
      @media screen and (-ms-high-contrast: active){&:active .ms-Button-icon {
        color: Window;
      }
      .ms-Fabric--isFocusVisible &:focus {
        border-style: solid;
        outline-color: transparent;
      }
  onClick={[Function]}
  role="button"
  tabIndex={0}
  type="button"
>
  <span
    className=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: inherit;
          display: inline;
          font-family: inherit;
          font-size: 14px;
          font-weight: 600;
          moz-osx-font-smoothing: grayscale;
          overflow: visible;
          webkit-font-smoothing: antialiased;
        }
  >
    Button
  </span>
</button>
`;

exports[`Button renders a primary circular Button with an icon correctly 1`] = `
<button
  className=
      ms-Button
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        background-color: #0078d4;
        border-color: #8a8886;
        border-radius: 50%;
        border-style: solid;
        border-width: 0px;
        box-sizing: border-box;
        color: #ffffff;
        cursor: pointer;
        display: inline-flex;
        flex-direction: row;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 600;
        justify-content: center;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        min-height: 32px;
        min-width: 32px;
        outline-color: transparent;
        overflow: hidden;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        text-align: center;
        text-decoration: none;
        user-select: none;
        vertical-align: baseline;
      }
      .ms-Fabric--isFocusVisible &:focus {
        background-clip: content-box;
        border-color: #605e5c;
        border-style: solid;
        border-width: 1px;
        outline-color: transparent;
        padding-bottom: 1px;
        padding-left: 1px;
        padding-right: 1px;
        padding-top: 1px;
      }
      & > * {
        margin-left: 4px 4px;
        text-overflow: ellipsis;
      }
      & > *:not(:first-child) {
        margin-left: 8px;
      }
      @media screen and (-ms-high-contrast: active){& {
        -ms-high-contrast-adjust: none;
        background-color: WindowText;
        border-width: 1px;
        color: Window;
      }
      &:hover {
        background-color: #106ebe;
        border-color: #8a8886;
        color: #ffffff;
      }
      @media screen and (-ms-high-contrast: active){&:hover {
        background-color: Highlight;
        border-color: Highlight;
        color: Window;
      }
      &:active {
        background-color: #005a9e;
        border-color: #8a8886;
        color: #ffffff;
      }
      @media screen and (-ms-high-contrast: active){&:active {
        background-color: Highlight;
        border-color: Highlight;
        color: Window;
      }
      &:hover .ms-Button-icon {
        color: #ffffff;
      }
      @media screen and (-ms-high-contrast: active){&:hover .ms-Button-icon {
        color: Window;
      }
      &:active .ms-Button-icon {
        color: #ffffff;
      }
      @media screen and (-ms-high-contrast: active){&:active .ms-Button-icon {
        color: Window;
      }
  onClick={[Function]}
  role="button"
  tabIndex={0}
  type="button"
>
  <i
    aria-hidden={true}
    className=
        ms-Icon
        ms-Button-icon
        {
          display: inline-block;
        }
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          font-family: "FabricMDL2Icons-2";
          font-style: normal;
          font-weight: normal;
          speak: none;
        }
        {
          color: #ffffff;
          display: flex;
          fill: #ffffff;
          font-size: 16px;
          font-weight: 400;
        }
        @media screen and (-ms-high-contrast: active){& {
          color: Window;
        }
    data-icon-name="FontSize"
    role="presentation"
  >
    
  </i>
</button>
`;

exports[`Button renders a primary circular checked Button correctly 1`] = `
<button
  className=
      ms-Button
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        background-color: #005a9e;
        border-color: #8a8886;
        border-radius: 50%;
        border-style: solid;
        border-width: 0px;
        box-sizing: border-box;
        color: #ffffff;
        cursor: pointer;
        display: inline-flex;
        flex-direction: row;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 600;
        justify-content: center;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        min-height: 32px;
        min-width: 32px;
        outline-color: transparent;
        overflow: hidden;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        text-align: center;
        text-decoration: none;
        user-select: none;
        vertical-align: baseline;
      }
      .ms-Fabric--isFocusVisible &:focus {
        background-clip: content-box;
        border-color: #605e5c;
        border-style: solid;
        border-width: 1px;
        outline-color: transparent;
        padding-bottom: 1px;
        padding-left: 1px;
        padding-right: 1px;
        padding-top: 1px;
      }
      & > * {
        margin-left: 4px 4px;
        text-overflow: ellipsis;
      }
      & > *:not(:first-child) {
        margin-left: 8px;
      }
      @media screen and (-ms-high-contrast: active){& {
        -ms-high-contrast-adjust: none;
        background-color: WindowText;
        border-width: 1px;
        color: Window;
      }
      &:hover {
        background-color: #106ebe;
        border-color: #8a8886;
        color: #ffffff;
      }
      @media screen and (-ms-high-contrast: active){&:hover {
        background-color: Highlight;
        border-color: Highlight;
        color: Window;
      }
      &:active {
        background-color: #005a9e;
        border-color: #8a8886;
        color: #ffffff;
      }
      @media screen and (-ms-high-contrast: active){&:active {
        background-color: Highlight;
        border-color: Highlight;
        color: Window;
      }
      &:hover .ms-Button-icon {
        color: #ffffff;
      }
      @media screen and (-ms-high-contrast: active){&:hover .ms-Button-icon {
        color: Window;
      }
      &:active .ms-Button-icon {
        color: #ffffff;
      }
      @media screen and (-ms-high-contrast: active){&:active .ms-Button-icon {
        color: Window;
      }
  onClick={[Function]}
  role="button"
  tabIndex={0}
  type="button"
>
  <i
    aria-hidden={true}
    className=
        ms-Icon
        ms-Button-icon
        {
          display: inline-block;
        }
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          font-family: "FabricMDL2Icons-3";
          font-style: normal;
          font-weight: normal;
          speak: none;
        }
        {
          color: #ffffff;
          display: flex;
          fill: #ffffff;
          font-size: 16px;
          font-weight: 400;
        }
        @media screen and (-ms-high-contrast: active){& {
          color: Window;
        }
    data-icon-name="Volume3"
    role="presentation"
  >
    
  </i>
</button>
`;

exports[`Button renders a primary circular disabled checked Button correctly 1`] = `
<button
  aria-disabled={true}
  className=
      ms-Button
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        background-color: #f3f2f1;
        border-color: #f3f2f1;
        border-radius: 50%;
        border-style: solid;
        border-width: 0px;
        box-sizing: border-box;
        color: #a19f9d;
        cursor: default;
        display: inline-flex;
        flex-direction: row;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 600;
        justify-content: center;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        min-height: 32px;
        min-width: 32px;
        outline-color: transparent;
        overflow: hidden;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        text-align: center;
        text-decoration: none;
        user-select: none;
        vertical-align: baseline;
      }
      .ms-Fabric--isFocusVisible &:focus {
        background-clip: content-box;
        border-color: #605e5c;
        border-style: solid;
        border-width: 1px;
        outline-color: transparent;
        padding-bottom: 1px;
        padding-left: 1px;
        padding-right: 1px;
        padding-top: 1px;
      }
      & > * {
        margin-left: 4px 4px;
        text-overflow: ellipsis;
      }
      & > *:not(:first-child) {
        margin-left: 8px;
      }
      @media screen and (-ms-high-contrast: active){& {
        -ms-high-contrast-adjust: none;
        background-color: Window;
        border-color: GrayText;
        border-width: 1px;
        color: GrayText;
      }
      &:hover {
        background-color: #f3f2f1;
        border-color: #f3f2f1;
        color: #a19f9d;
      }
      @media screen and (-ms-high-contrast: active){&:hover {
        background-color: Window;
        border-color: GrayText;
        color: GrayText;
      }
      &:active {
        background-color: #f3f2f1;
        border-color: #f3f2f1;
        color: #a19f9d;
      }
      @media screen and (-ms-high-contrast: active){&:active {
        background-color: Window;
        border-color: GrayText;
        color: GrayText;
      }
      &:hover .ms-Button-icon {
        color: #a19f9d;
      }
      @media screen and (-ms-high-contrast: active){&:hover .ms-Button-icon {
        color: GrayText;
      }
      &:active .ms-Button-icon {
        color: #a19f9d;
      }
      @media screen and (-ms-high-contrast: active){&:active .ms-Button-icon {
        color: GrayText;
      }
  disabled={true}
  onClick={[Function]}
  role="button"
  type="button"
>
  <i
    aria-hidden={true}
    className=
        ms-Icon
        ms-Button-icon
        {
          display: inline-block;
        }
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          font-family: "FabricMDL2Icons-3";
          font-style: normal;
          font-weight: normal;
          speak: none;
        }
        {
          color: #a19f9d;
          display: flex;
          fill: #a19f9d;
          font-size: 16px;
          font-weight: 400;
        }
        @media screen and (-ms-high-contrast: active){& {
          color: GrayText;
        }
    data-icon-name="Volume3"
    role="presentation"
  >
    
  </i>
</button>
`;

exports[`Button renders a primary disabled checked Button correctly 1`] = `
<button
  aria-disabled={true}
  className=
      ms-Button
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        background-color: #f3f2f1;
        border-color: #f3f2f1;
        border-radius: 2px;
        border-style: solid;
        border-width: 0px;
        box-sizing: border-box;
        color: #a19f9d;
        cursor: default;
        display: inline-flex;
        flex-direction: row;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 600;
        justify-content: center;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        min-height: 32px;
        min-width: 100px;
        outline-color: transparent;
        outline: transparent;
        overflow: hidden;
        padding-bottom: 0px;
        padding-left: 20px;
        padding-right: 20px;
        padding-top: 0px;
        position: relative;
        text-align: center;
        text-decoration: none;
        user-select: none;
        vertical-align: baseline;
      }
      &::-moz-focus-inner {
        border: 0;
      }
      .ms-Fabric--isFocusVisible &:focus:after {
        border: 1px solid #ffffff;
        bottom: 2px;
        content: "";
        left: 2px;
        outline: 1px solid transparent;
        position: absolute;
        right: 2px;
        top: 2px;
        z-index: 1;
      }
      & > * {
        margin-left: 4px 4px;
        text-overflow: ellipsis;
      }
      & > *:not(:first-child) {
        margin-left: 8px;
      }
      @media screen and (-ms-high-contrast: active){& {
        -ms-high-contrast-adjust: none;
        background-color: Window;
        border-color: GrayText;
        border-width: 1px;
        color: GrayText;
      }
      &:hover {
        background-color: #f3f2f1;
        border-color: #f3f2f1;
        color: #a19f9d;
      }
      @media screen and (-ms-high-contrast: active){&:hover {
        background-color: Window;
        border-color: GrayText;
        color: GrayText;
      }
      &:active {
        background-color: #f3f2f1;
        border-color: #f3f2f1;
        color: #a19f9d;
      }
      @media screen and (-ms-high-contrast: active){&:active {
        background-color: Window;
        border-color: GrayText;
        color: GrayText;
      }
      &:hover .ms-Button-icon {
        color: #a19f9d;
      }
      @media screen and (-ms-high-contrast: active){&:hover .ms-Button-icon {
        color: GrayText;
      }
      &:active .ms-Button-icon {
        color: #a19f9d;
      }
      @media screen and (-ms-high-contrast: active){&:active .ms-Button-icon {
        color: GrayText;
      }
      .ms-Fabric--isFocusVisible &:focus {
        border-style: solid;
        outline-color: transparent;
      }
  disabled={true}
  onClick={[Function]}
  role="button"
  type="button"
>
  <span
    className=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: inherit;
          display: inline;
          font-family: inherit;
          font-size: 14px;
          font-weight: 600;
          moz-osx-font-smoothing: grayscale;
          overflow: visible;
          webkit-font-smoothing: antialiased;
        }
  >
    Button
  </span>
</button>
`;
